Fixed small bugs with connection testing, added autologout, and added loading screen.
Program now logs user out after five minutes of inactivity. There is also a loading screen
(currently only on the login page) that lets a user know when a backend process is happening.

--- a/app.json
+++ b/app.json
@@ -8,6 +8,11 @@
     "scheme": "bonasodatamobile",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/images/bonaso-splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
     "ios": {
       "supportsTablet": true
     },
@@ -40,5 +45,6 @@
     "experiments": {
       "typedRoutes": true
     }
+    
   }
 }
